--- a/src/theme.scss
+++ b/src/theme.scss
@@ -10,7 +10,7 @@ $flag-icon-css-path: '~flag-icon-css/flags' !default;
 @include mat-core();
 
 //$custom-primary: mat-palette($mat-grey, 900);
-$custom-primary: mat-palette($mat-teal, 900, A700);
+$custom-primary: mat-palette($mat-light-blue, 700);
 $custom-accent:  mat-palette($mat-lime, 100);
 $custom-warn:    mat-palette($mat-red);
 
