--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -1197,3 +1197,27 @@ footer {
   margin: 0;
   color: #fff !important;
 }
+
+.transparency-slider {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  background: #f1f3f4;
+}
+
+.slider-back {
+  width: 15%;
+  height: 100%;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+
+.slider-bar {
+  width: 85%;
+  top: 0 !important;
+  position: absolute;
+  right: 0;
+}
