- insere referência a "mCS-sisgeo-theme.css" no angular.json para que ele seja carregado em produção - retorna a referência a angular form no package.json, pois estava causando erro de compilação - retorna com a classe css "pull-right" pois o bootstrap não esta sendo carregado no servidor - traduz o nome das visions e das layers - corrige o nome da vision do lago de furnas do sensor TM - Altera o título do site - Abre uma nova aba ao clicar no link de contato - Aumenta a fonte do texto abaixo do logo, além de centralizar (verticalmente) melhor o logo e o texto

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,21 +2,21 @@
 <div id="content">
     <nav class="navbar navbar-expand-lg materialnav navbar-header"> 
         <i class="material-icons menuicon" id="sidebarCollapse" >menu</i>
-        <span style="font-size: 19px;">SisGeo 1.0</span>
+        <span style="font-size: 19px;">SisGEO 1.0</span>
         <div class="collapse navbar-collapse flex-column" id="navbarSupportedContent">
             <ul class="navbar-nav navbar-right analises">
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" style="cursor: pointer;" href="{{ sisgeoAboutUrl }}">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="{{ sisgeoAboutUrl }}">
                         {{ 'menu.about' | translate }}
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="cursor: pointer;" href="{{ sisgeoContactUrl }}">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="{{ sisgeoContactUrl }}">
                         {{ 'menu.contact' | translate }}
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" style="cursor: pointer;" href="{{ sisgeoHelpUrl }}">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="{{ sisgeoHelpUrl }}">
                         {{ 'menu.help' | translate }}
                     </a>
                 </li>
@@ -38,7 +38,7 @@
 <!-- Sidebar Holder -->
 <nav id="sidebar">
     <div class="sidebar-header">
-        <img class="img-responsive" src="{{ imgPath }}assets/img/map/sisgeo.png" alt="Sisgeo">
+        <img class="img-responsive" src="{{ imgPath }}assets/img/map/sisgeo.png" alt="SisGEO">
         <p>Sistema de compartilhamento de dados geoespaciais (Versão 1.0)</p>
     </div>
     <!-- ferramentas gerais --> 
