- altera a rota base do projeto de "/app" para apenas "/" - adiciona componente about, que será a página principal dos projetos do sisgeo - adiciona outro componente (ngx-spinner) no carregamento da página - altera lógica do parâmetro da url de /webmap, que agora apenas aceita o parâmetro "hl" para definir a linguagem do site - modifica método de restaurar mapa, para restaurar na posição da primeira layer da primeira vision - corrigem ordem dos parâmetro que eram passados na método "map" de terrabrasilisApi, latitude e longitude estavam invertidos - diminui altura da div que fica o logo di sisgeo - altera as algumas cores do modal de  getFeatureInfo que ainda estavam em verde

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner type="square-spin" bdColor = "rgba(0,0,0,0.4)" color="rgba(37,144,195,0.65)" size="large">
+    <p class="loading-text">Carregando...</p>
+</ngx-spinner>
 <!-- navbar -->
 <div id="content">
     <nav class="navbar navbar-expand-lg materialnav navbar-header"> 
@@ -39,7 +42,7 @@
 <nav id="sidebar">
     <div class="sidebar-header">
         <img class="img-responsive" src="{{ imgPath }}assets/img/map/sisgeo.png" alt="SisGEO">
-        <p>Sistema de compartilhamento de dados geoespaciais (Versão 1.0)</p>
+        <p>Sistema de compartilhamento de dados geoespaciais</p>
     </div>
     <!-- ferramentas gerais --> 
     <div class="ferramentas">
