Inserindo todas as páginas com scroll arrumado e cores padrão

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -139,3 +139,8 @@
 
 <!-- map -->
 <div id="map" class="container-fluid mapa" style="background-color: #fff !important;"></div>
+
+<footer class="footer">
+    <p><a href="#">Sisgeo</a>&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
+    <div class="version_style">ver: {{version}}</div>
+</footer>
