--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -7,7 +7,9 @@
 
 :root {
   --sidebar-primary-color: #2590c3;
-  --sidebar-second-color: #00d0ff;--navbar-color: #0c2461;
+  --sidebar-second-color: #00d0ff;
+  --navbar-color: #0c2461;
+  --blue-footer: #07263c;
 }
 
 body {
@@ -907,7 +909,7 @@ a.article:hover {
     FOOTER
 ---------------------------------------------------------*/
 
-footer {
+.footer {
   background-color: var(--sidebar-primary-color);
   position: fixed;
   bottom: 0;
@@ -1185,7 +1187,7 @@ footer {
   }
 }
 
-footer {
+.footer {
   background-color: var(--navbar-color);
   position: fixed;
   bottom: 0;
