--- a/src/app/mapeamento/home/mapeamento.component.html
+++ b/src/app/mapeamento/home/mapeamento.component.html
@@ -1,32 +1,5 @@
 <div class="content">
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Projetos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Tecnologias</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Desenvolvedores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Contato</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
+  <app-navbar></app-navbar>
   <section id="about" class="about">
     <div class="container">
       <div class="content-section-heading text-center">
@@ -177,8 +150,8 @@
               Visitas ao site:
             </p>
             <div align=center>
-              <img src='https://www.counter12.com/img-B7xAabcz3251a658-79.gif' border='0' alt='contador de acesso'>
-              <script type='text/javascript' src='https://www.counter12.com/ad.js?id=B7xAabcz3251a658'></script>
+              <img src='https://www.counter12.com/img-YacAbcWb4230ZBZC-79.gif' border='0' alt='web counter free'>
+              <script type='text/javascript' src='https://www.counter12.com/ad.js?id=YacAbcWb4230ZBZC'></script><br>
             </div>
           </div>
         </div>
