--- a/src/app/bacia/bacia.component.html
+++ b/src/app/bacia/bacia.component.html
@@ -1,32 +1,5 @@
 <div class="content">
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Projetos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Tecnologias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Desenvolvedores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Contato</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    <app-navbar></app-navbar>
     <section id="about" class="about">
         <div class="container">
             <div class="content-section-heading text-center">
@@ -166,10 +139,8 @@
                             Visitas ao site:
                         </p>
                         <div align=center>
-                            <img src='https://www.counter12.com/img-yzaZcwwdcBadcyd6-79.gif' border='0'
-                                alt='contador free'>
-                            <script type='text/javascript'
-                                src='https://www.counter12.com/ad.js?id=yzaZcwwdcBadcyd6'></script>
+                            <img src='https://www.counter12.com/img-D2D3z5w8Wa5z304c-79.gif' border='0' alt='free counter'>
+                            <script type='text/javascript' src='https://www.counter12.com/ad.js?id=D2D3z5w8Wa5z304c'></script>
                         </div>
                     </div>
                 </div>
