--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,14 +1,15 @@
-:root {
-  --blue: #0c2461;
-  --blue-footer: #07263c;
-}
-
 .content {
   height: 100vh;
   overflow-y: auto;
   position: absolute;
   z-index: 1;
   width: 100%;
+}
+
+p {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 15.5px;
+  line-height: 1.8;
 }
 
 .paragraph p {
@@ -53,10 +54,6 @@
 
 .nav-link:hover {
   opacity: 0.8;
-}
-
-.nav-item.active .nav-link {
-  color: #cb356b;
 }
 
 header {
@@ -158,6 +155,11 @@ header img {
   box-shadow: 0px 1px 1px 1px #b3d7ffcc;
 }
 
+.bg-project a:hover {
+  text-decoration: underline;
+  text-decoration-color: #2590c4;
+}
+
 .project-img {
   height: 230px;
 }
@@ -252,9 +254,8 @@ header img {
 #toTop {
   position: fixed;
   bottom: 10px;
-  right: 10px;
+  right: 25px;
   cursor: pointer;
-  display: none;
   border-radius: 35px;
 }
 
