--- a/src/app/topografia/topografia.component.html
+++ b/src/app/topografia/topografia.component.html
@@ -1,32 +1,5 @@
 <div class="content">
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Projetos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Tecnologias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Desenvolvedores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Contato</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    <app-navbar></app-navbar>
     <section id="about" class="about">
         <div class="container">
             <div class="content-section-heading text-center">
@@ -72,7 +45,9 @@
                         Guilherme Aparecido Ferraz de Souza (Bolsista) <br>
                         E-mail: guiferraz84@yahoo.com.br <br><br>
                         Luize Batista Campos (Bolsista FAPEMIG) <br>
-                        E-mail: luizebcampos@gmail.com <br>
+                        E-mail: luizebcampos@gmail.com <br><br>
+                        Guilherme da Silva Rios <br>
+                        E-mail: guilhermesilvarios@gmail.com <br>
                     </p>
                 </div>
             </div>
@@ -170,10 +145,8 @@
                             Visitas ao site:
                         </p>
                         <div align=center>
-                            <img src='https://www.counter12.com/img-wxBa150ZZDYc03bW-79.gif' border='0'
-                                alt='contador de visitantes'>
-                            <script type='text/javascript'
-                                src='https://www.counter12.com/ad.js?id=wxBa150ZZDYc03bW'></script>
+                            <img src='https://www.counter12.com/img-D7C4ZA97wcba2150-79.gif' border='0' alt='web counter free'>
+                            <script type='text/javascript' src='https://www.counter12.com/ad.js?id=D7C4ZA97wcba2150'></script><br>
                         </div>
                     </div>
                 </div>
