- remove mais alguns arquivos que não vão ser utilizados - define um timeout para que o spinner pare, caso o geoserver demore a responder - comenta o código de wmsSearch para que possa ser usado com facilidade no futuro

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -58,6 +58,12 @@
         <dfn attr.data-info="{{ 'tools.fullscreen' | translate }}">
             <button type="button" class="btn" (click)="fullScreen()"><i class="material-icons md-light">fullscreen</i></button>
         </dfn>
+        <!-- Esse trecho foi deixado comentado, para que fique mais fácil de habilitar essa função no futuro.
+        WmsSearchComponent não está funcionando no Sisgeo, por isso não foi habilitado, e por falta de tempo
+        não foi possível fazer com que funcionasse.  -->
+        <!-- <dfn attr.data-info="{{ 'tools.addLayer' | translate }}">
+            <button type="button" class="btn" (click)="showDialogCapabilities()"><i class="material-icons md-light">add_box</i></button>
+        </dfn> -->
     </div>
     <!-- Overlayers -->
     <div *ngFor="let project of overlayers">
