--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,19 +7,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#about" (click)="scroll(about)">Sobre</a>
+                    <a class="nav-link scroll" href="#about">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#projects" (click)="scroll(projects)">Projetos</a>
+                    <a class="nav-link scroll" href="#projects">Projetos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#technologies" (click)="scroll(tecknologies)">Tecnologias</a>
+                    <a class="nav-link scroll" href="#technologies">Tecnologias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#team" (click)="scroll(team)">Desenvolvedores</a>
+                    <a class="nav-link scroll" href="#team">Desenvolvedores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#footer" (click)="scroll(footer)">Contato</a>
+                    <a class="nav-link scroll" href="#footer">Contato</a>
                 </li>
             </ul>
         </div>
