--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -280,7 +280,7 @@
             <div class="content-div-heading text-center">
                 <h2 class="text-blue mb-5">Parceiros</h2>
             </div>
-            <div class="row mb-5">
+            <div class="row align-items-center mb-5">
                 <div class="col-md-4 mb-5 text-center">
                     <a href="http://www.unifal-mg.edu.br" target="_blank"><img class="partner-img img-fluid"
                             src="../../assets/img/page/unifal.png" alt=""></a>
@@ -294,7 +294,7 @@
                             src="../../assets/img/page/bcc.png" alt=""></a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-4 mb-5 text-center">
                     <a href="https://www.unifal-mg.edu.br/geografia/" target="_blank"><img class="partner-img img-fluid"
                             src="../../assets/img/page/geografia.jpeg" alt=""></a>
@@ -355,7 +355,7 @@
     <footer id="footer" class="footerPage">
         <div class="container">
             <div class="content-section-heading text-center">
-                <h2 class="white-text mb-5 pt-4">Contatos</h2>
+                <h2 class="white-text mb-4 pt-3">Contatos</h2>
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -367,14 +367,16 @@
                         Laboratório de Cartografia <br>
                         Prédio B, Sala 212 <br>
                         Telefone: (35) 3701-1932-1933</p><br>
-                    <h5 class="white-text">Laboratório de Cartografia</h5>
-                    <p class="contact">
-                        Prof. Marcelo de Oliveira Latuf<br>
-                        marcelo.latuf@unifal-mg.edu.br<br>
-                        Unidade Santa Clara - Prédio B Sala 402 L<br>
-                        Telefone: (35)3701-1932, (35)3701-1933
-                    </p>
-                </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h5 class="white-text">Laboratório de Cartografia</h5>
+                        <p class="contact">
+                            Prof. Marcelo de Oliveira Latuf<br>
+                            marcelo.latuf@unifal-mg.edu.br<br>
+                            Unidade Santa Clara - Prédio B Sala 402 L<br>
+                            Telefone: (35)3701-1932, (35)3701-1933
+                        </p>
+                    </div>
                 <div class="col-md-4">
                     <h5 class="white-text">Departamento de Ciência da Computação</h5>
                     <p class="contact">
@@ -382,21 +384,9 @@
                         pagliares@bcc.unifal-mg.edu.br<br>
                         Prédio C, Sala 301-I<br>
                         Telefone: (35)3701-1949</p>
-                </div>
-                <div class="col-md-4">
-                    <!-- Widget Previs&atilde;o de Tempo CPTEC/INPE -->
-                    <iframe allowtransparency="true" marginwidth="0" marginheight="0" hspace="0" vspace="0"
-                        frameborder="0" scrolling="no"
-                        src="https://www.cptec.inpe.br/widget/widget.php?p=356&w=h&c=748ccc&f=ffffff" height="200px"
-                        width="215px">
-                    </iframe>
-                    <noscript>Previs&atilde;o de <a href="http://www.cptec.inpe.br/cidades/tempo/356">Alfenas/MG</a>
-                        oferecido por
-                        <a href="http://www.cptec.inpe.br">CPTEC/INPE</a></noscript>
-                    <!-- Widget Previs&atilde;o de Tempo CPTEC/INPE -->
-                    <div class="row">
+                    <div class="row counter">
                         <p class="contact">
-                            Visitas ao site:
+                            Visitas:
                         </p>
                         <div align=center>
                             <img src='https://www.counter12.com/img-Dbddb5zCDAzBbZD0-79.gif' border='0' alt='conter12'>
