- insere referências ás últimas cartas topográficas nos arquivos en.json e pt-br.json - define linguagem padrão para pt-br quando o parâmetro hl não for passado pela url - define uma borda entre as tools básicas e a primeira vision na barra lateral

--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -133,6 +133,7 @@ a:focus {
   padding: 15px 10px 10px 10px;
   background-color: var(--sidebar-primary-color);
   color: #fff;
+  border-bottom: 1px solid;
 }
 
 .ferramentas div {
